# Lib-LDL-Samples

./: CMakeLists.txt  dependencies_download.bat
JoeyDeVries/1.getting_started/: 7.4.camera_class.cpp  CMakeLists.txt
JoeyDeVries/include/learnopengl/: shader_m.h  texture.h
Tutorials/JoeyDeVries/include/learnopengl/: shader_s.h
